优化赔率变化

--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -75,6 +75,7 @@
                 android:id="@+id/league_odd_match_favorite"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
+                android:layout_marginRight="@dimen/margin_10"
                 android:src="@drawable/selector_star_v4"
                 tools:ignore="ContentDescription" />
 
@@ -199,7 +200,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="12dp"
                 android:minWidth="10dp"
-                android:background="@color/color_F75452_b73a20"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/bg_sport_card_red"
                 android:paddingHorizontal="1dp"
                 android:layout_marginLeft="@dimen/margin_5"
                 android:textColor="@color/color_FCFCFC"
@@ -214,6 +216,7 @@
                 android:id="@+id/ic_attack_h"
                 android:layout_width="2dp"
                 android:layout_height="14dp"
+                android:layout_marginRight="5dp"
                 android:src="@drawable/ic_baseball_attack"
                 android:visibility="gone"
                 tools:visibility="visible" />
@@ -237,7 +240,7 @@
                 android:id="@+id/league_odd_match_total_score_home_bottom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/color_F75452_b73a20"
+                android:textColor="@color/color_F75452_E23434"
                 android:textSize="@dimen/textSize14sp"
                 android:visibility="gone"
                 tools:text="1"
@@ -312,7 +315,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="12dp"
                 android:minWidth="10dp"
-                android:background="@color/color_F75452_b73a20"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/bg_sport_card_red"
                 android:paddingHorizontal="1dp"
                 android:includeFontPadding="true"
                 android:gravity="center"
@@ -326,6 +330,7 @@
                 android:id="@+id/ic_attack_c"
                 android:layout_width="2dp"
                 android:layout_height="14dp"
+                android:layout_marginRight="@dimen/margin_5"
                 android:src="@drawable/ic_baseball_attack"
                 android:visibility="gone"
                 tools:visibility="visible" />
@@ -350,7 +355,7 @@
                 android:id="@+id/league_odd_match_total_score_away_bottom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/color_F75452_b73a20"
+                android:textColor="@color/color_F75452_E23434"
                 android:textSize="@dimen/textSize14sp"
                 android:visibility="gone"
                 tools:text="0"
