--- a/app/src/main/res/layout/itemview_odd_btn_2x2_v6.xml
+++ b/app/src/main/res/layout/itemview_odd_btn_2x2_v6.xml
@@ -15,8 +15,8 @@
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="3"
-        android:textColor="@color/color_909090_666666"
-        android:textSize="@dimen/textSize12sp"
+        android:textColor="@color/color_6C7BA8"
+        android:textSize="@dimen/textSize10sp"
         app:autoSizeMaxTextSize="@dimen/textSize12sp"
         app:autoSizeMinTextSize="@dimen/textSize8sp"
         app:autoSizeTextType="uniform"
