--- a/app/src/main/res/layout/button_odd_detail.xml
+++ b/app/src/main/res/layout/button_odd_detail.xml
@@ -31,10 +31,10 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:maxLines="1"
-                android:textColor="@color/selector_button_odd_top_text2"
-                android:textSize="@dimen/textSize13sp"
+                android:textColor="@color/selector_button_odd_top_text"
+                android:textSize="@dimen/textSize14sp"
                 tools:text="义大利"
-                tools:textColor="@color/color_7F7F7F_999999" />
+                tools:textColor="@color/color_6C7BA8" />
 
             <TextView
                 android:id="@+id/tv_spread"
@@ -43,35 +43,51 @@
                 android:gravity="center"
                 android:maxLines="1"
                 android:textColor="@color/selector_button_odd_top_text"
-                android:textSize="@dimen/textSize13sp"
+                android:textSize="@dimen/textSize10sp"
                 tools:text="-0.5/1"
-                tools:textColor="@color/color_F75452_b73a20" />
+                tools:textColor="@color/color_6C7BA8" />
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_odds"
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:textColor="@color/selector_button_odd_bottom_text"
-            android:textSize="@dimen/textSize15sp"
-            android:textStyle="bold"
-            tools:text="1.067"
-            android:includeFontPadding="false" />
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/iv_arrow"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:layout_marginRight="2dp"
+                tools:src="@drawable/selector_odds_arrow_up"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/tv_odds"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/helvetica"
+                android:includeFontPadding="false"
+                android:textColor="@color/selector_button_odd_bottom_text"
+                android:textSize="@dimen/textSize15sp"
+                android:textStyle="bold"
+                tools:text="1.067" />
+        </LinearLayout>
+
 
     </LinearLayout>
-
 
     <ImageView
         android:id="@+id/img_odd_lock"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg_radius_4_button_odds_lock"
-        android:scaleType="center"
-        android:src="@drawable/ic_iconlock"
-        android:visibility="gone" />
-
+        android:padding="@dimen/margin_15"
+        android:src="@drawable/ic_lock"
+        android:visibility="gone"
+        tools:visibility="gone" />
     <TextView
         android:id="@+id/img_odd_unknown"
         android:layout_width="match_parent"
@@ -79,7 +95,7 @@
         android:background="@drawable/bg_radius_4_button_odds_lock"
         android:gravity="center"
         android:textSize="@dimen/textSize12sp"
-        android:textColor="@color/color_7F7F7F_999999"
+        android:textColor="@color/color_6C7BA8"
         android:text="@string/unknown_data"
         android:visibility="gone" />
 
