--- a/app/src/main/res/drawable/bg_radius_2_ffcc15.xml
+++ b/app/src/main/res/drawable/bg_radius_2_ffcc15.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="2dp" />
-    <solid android:color="#025BE8" />
+    <solid android:color="#FFCC15" />
 </shape>
