--- a/app/src/main/res/layout/content_odds_detail_list_fg_lg.xml
+++ b/app/src/main/res/layout/content_odds_detail_list_fg_lg.xml
@@ -1,66 +1,74 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:ignore="SpUsage"
-    android:elevation="5dp"
-    android:background="@drawable/bg_radius_10_fff">
-
-
-    <include layout="@layout/content_odds_detail_list_item" />
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_tab"
-        android:layout_width="match_parent"
-        android:layout_height="65dp">
-
-        <TextView
-            android:id="@+id/tv_fg"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/odds_detail_play_type_fg"
-            android:textColor="@color/color_select_blue_black"
-            android:textSize="@dimen/textSize14sp"
-            app:layout_constraintBottom_toTopOf="@+id/divider"
-            app:layout_constraintEnd_toStartOf="@+id/tv_lg"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/tv_lg"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/odds_detail_play_type_lg"
-            app:layout_constraintBottom_toTopOf="@+id/divider"
-            android:textColor="@color/color_select_blue_black"
-            android:textSize="@dimen/textSize14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tv_fg" />
-
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/color_404040_cccccc"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_bet"
+    android:layout_height="wrap_content">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_191919_FCFCFC"
-        android:nestedScrollingEnabled="false"
-        android:overScrollMode="never"
-        tools:listitem="@layout/content_type_one_list_item" />
+        android:orientation="vertical"
+        tools:ignore="SpUsage"
+        android:elevation="5dp"
+        style="@style/StyleOddButtonLL"
+        android:background="@drawable/bg_radius_10_fff">
 
 
-</LinearLayout>
+        <include layout="@layout/content_odds_detail_list_item" />
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_tab"
+            android:layout_width="match_parent"
+            android:layout_height="65dp">
+
+            <TextView
+                android:id="@+id/tv_fg"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/odds_detail_play_type_fg"
+                android:textColor="@color/color_select_blue_black"
+                android:textSize="@dimen/textSize14sp"
+                app:layout_constraintBottom_toTopOf="@+id/divider"
+                app:layout_constraintEnd_toStartOf="@+id/tv_lg"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_lg"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/odds_detail_play_type_lg"
+                app:layout_constraintBottom_toTopOf="@+id/divider"
+                android:textColor="@color/color_select_blue_black"
+                android:textSize="@dimen/textSize14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/tv_fg" />
+
+            <View
+                android:id="@+id/divider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/color_404040_cccccc"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_bet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_191919_FCFCFC"
+            android:nestedScrollingEnabled="false"
+            android:overScrollMode="never"
+            tools:listitem="@layout/content_type_one_list_item" />
+
+        <include layout="@layout/space_content_odds_detail_list"/>
+
+    </LinearLayout>
+
+</FrameLayout>
 
