--- a/app/src/main/res/layout/content_odds_detail_list_group_4_item.xml
+++ b/app/src/main/res/layout/content_odds_detail_list_group_4_item.xml
@@ -1,11 +1,19 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:elevation="5dp"
-    android:background="@drawable/bg_radius_10_fff">
+    android:layout_height="wrap_content">
 
-    <include layout="@layout/content_odds_detail_list_one_include" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        style="@style/StyleOddButtonLL"
+        android:background="@drawable/bg_radius_10_fff">
 
-</LinearLayout>
+        <include layout="@layout/content_odds_detail_list_one_include" />
+        <include layout="@layout/space_content_odds_detail_list"/>
+
+    </LinearLayout>
+</FrameLayout>
 
