--- a/app/src/main/res/layout/content_odds_detail_list_single.xml
+++ b/app/src/main/res/layout/content_odds_detail_list_single.xml
@@ -1,28 +1,38 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:ignore="SpUsage"
-    android:elevation="5dp"
-    android:background="@drawable/bg_radius_10_fff">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-    <include layout="@layout/content_odds_detail_list_item" />
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_bet"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:nestedScrollingEnabled="false"
-        android:overScrollMode="never"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="3"
-        tools:itemCount="3"
-        tools:listitem="@layout/content_type_grid_item" />
+        android:orientation="vertical"
+        tools:ignore="SpUsage"
+        style="@style/StyleOddButtonLL"
+        android:background="@drawable/bg_radius_10_fff">
 
 
-</LinearLayout>
+        <include layout="@layout/content_odds_detail_list_item" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_bet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:nestedScrollingEnabled="false"
+            android:overScrollMode="never"
+            android:paddingHorizontal="7dp"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="3"
+            tools:itemCount="3"
+            tools:listitem="@layout/content_type_grid_item" />
+
+        <include layout="@layout/space_content_odds_detail_list"/>
+
+    </LinearLayout>
+
+</FrameLayout>
+
 
