--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -108,4 +108,17 @@
         <item name="android:textSize">@dimen/textSize14sp</item>
     </style>
 
+    <style name="StyleOddButtonLL">
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:elevation">3dp</item>
+        <item name="android:clipChildren">false</item>
+    </style>
+
+    <style name="StyleOddButtonItem">
+<!--        <item name="android:paddingBottom">10dp</item>-->
+    </style>
+
 </resources>
