--- a/app/src/main/res/layout/button_odd_detail_detail.xml
+++ b/app/src/main/res/layout/button_odd_detail_detail.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="3dp">
 
     <FrameLayout
@@ -14,7 +14,7 @@
         tools:ignore="SpUsage,ContentDescription">
 
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:paddingHorizontal="6dp"
             android:background="@drawable/selector_button_radius_4_odds_detail"
             android:layout_width="match_parent"
@@ -33,8 +33,28 @@
                 android:textColor="@color/selector_button_odd_top_text2"
                 android:textSize="@dimen/textSize14sp"
                 android:paddingRight="5dp"
-                tools:text="义大利"
-                tools:textColor="@color/color_A7B2C" />
+                tools:text="义大利义大利"
+                tools:textColor="@color/color_A7B2C"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+<!--            <TextView-->
+<!--                android:id="@+id/tv_spread_2"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:fontFamily="@font/helvetica"-->
+<!--                android:maxLines="1"-->
+<!--                android:textColor="@color/selector_button_odd_top_text2"-->
+<!--                android:textSize="@dimen/textSize13sp"-->
+<!--                tools:text="-0.5/1"-->
+<!--                tools:textColor="@color/color_A7B2C4"-->
+<!--                app:layout_constraintRight_toLeftOf="@+id/tv_odds"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"/>-->
+
+
 
             <TextView
                 android:id="@+id/tv_spread"
@@ -46,7 +66,10 @@
                 android:textColor="@color/selector_button_odd_top_text2"
                 android:textSize="@dimen/textSize13sp"
                 tools:text="-0.5/1"
-                tools:textColor="@color/color_A7B2C4" />
+                tools:textColor="@color/color_A7B2C4"
+                app:layout_constraintLeft_toRightOf="@+id/tv_name"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
             <TextView
                 android:id="@+id/tv_odds"
@@ -56,7 +79,10 @@
                 android:textColor="@color/selector_button_odd_bottom_text"
                 android:textSize="@dimen/textSize14sp"
                 android:paddingLeft="10dp"
-                tools:text="1.067" />
+                tools:text="1.067"
+                app:layout_constraintRight_toLeftOf="@+id/iv_arrow"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
             <ImageView
                 android:id="@+id/iv_arrow"
@@ -66,9 +92,12 @@
                 tools:src="@drawable/selector_odds_arrow_up"
                 android:visibility="gone"
                 android:layout_marginLeft="2dp"
-                tools:visibility="visible" />
+                tools:visibility="visible"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         <ImageView
