--- a/app/src/main/res/layout/fragment_self_limit_bet.xml
+++ b/app/src/main/res/layout/fragment_self_limit_bet.xml
@@ -12,9 +12,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/margin_4"
         app:cardBackgroundColor="@color/transparent_black_0"
-        app:cardElevation="0dp">
+        app:cardCornerRadius="@dimen/margin_5"
+        app:cardElevation="5dp"
+        app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -74,7 +75,7 @@
                     android:layout_width="@dimen/margin_16"
                     android:layout_height="@dimen/margin_16"
                     android:layout_marginRight="@dimen/margin_14"
-                    android:src="@drawable/ic_blue_info" />
+                    android:src="@drawable/ic_icon_exp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -84,9 +85,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_10"
-        app:cardCornerRadius="@dimen/margin_4"
         app:cardBackgroundColor="@color/transparent_black_0"
-        app:cardElevation="0dp">
+        app:cardCornerRadius="@dimen/margin_5"
+        app:cardElevation="5dp"
+        app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:id="@+id/llSelfLimit"
@@ -99,22 +101,15 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minWidth="62dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="@dimen/margin_10"
                 android:layout_marginEnd="@dimen/margin_10"
+                android:minWidth="62dp"
                 android:text="@string/self_limit_per_bet_limit_highest"
                 android:textColor="@color/color_BBBBBB_333333"
                 android:textSize="@dimen/textSize13sp"
                 android:textStyle="bold" />
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:layout_marginTop="@dimen/margin_10"
-                android:layout_marginBottom="@dimen/margin_10"
-                android:background="@color/color_2B2B2B_e2e2e2" />
 
             <EditText
                 android:id="@+id/etMount"
@@ -124,30 +119,11 @@
                 android:layout_marginLeft="@dimen/margin_8"
                 android:layout_weight="1"
                 android:backgroundTint="@color/transparent"
-                android:textColor="@color/color_BBBBBB_333333"
-                android:textColorHint="@color/color_404040_cccccc"
                 android:hint="@string/self_limit_per_bet_limit_input_highest"
                 android:inputType="number"
+                android:textColor="@color/color_BBBBBB_333333"
+                android:textColorHint="@color/color_404040_cccccc"
                 android:textSize="@dimen/textSize12sp" />
-
-            <TextView
-                android:id="@+id/btnConfirm"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:layout_marginTop="@dimen/margin_6"
-                android:layout_marginRight="@dimen/margin_14"
-                android:layout_marginBottom="@dimen/margin_6"
-                android:background="@drawable/bg_radius_4_button_withdraw_commission_blue"
-                android:enabled="false"
-                android:gravity="center"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:text="@string/btn_confirm"
-                android:textAllCaps="true"
-                android:textColor="@color/color_317FFF_0760D4"
-                android:textSize="@dimen/textSize12sp"
-                android:textStyle="bold" />
 
 
         </LinearLayout>
@@ -155,14 +131,14 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/tvError"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_8"
         android:text="@string/self_limit_error"
         android:textColor="@color/color_E44438_e44438"
-        android:textSize="@dimen/textSize12sp"/>
+        android:textSize="@dimen/textSize12sp"
+        android:visibility="gone" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
@@ -201,5 +177,21 @@
             app:layout_constraintTop_toBottomOf="@id/tvPerBetLimit" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/btnConfirm"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginTop="@dimen/margin_15"
+        android:layout_marginBottom="@dimen/margin_14"
+        android:background="@drawable/ic_submit"
+        android:enabled="false"
+        android:gravity="center"
+        android:text="@string/btn_confirm"
+        android:textAllCaps="true"
+        android:textColor="@color/exo_white"
+        android:textSize="@dimen/textSize12sp"
+        android:textStyle="bold" />
+
 
 </LinearLayout>
