--- a/app/src/main/res/layout/fragment_self_limit_froze.xml
+++ b/app/src/main/res/layout/fragment_self_limit_froze.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_141414_F3F4F5"
+    android:background="@color/color_F0F5FA"
     android:orientation="vertical"
     android:padding="@dimen/margin_14"
     tools:context=".ui.feedback.suggest.FeedbackSubmitFragment">
@@ -12,9 +12,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/margin_4"
         app:cardBackgroundColor="@color/transparent_black_0"
-        app:cardElevation="0dp">
+        app:cardCornerRadius="@dimen/margin_5"
+        app:cardElevation="5dp"
+        app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,7 +26,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_14"
+                android:layout_marginLeft="@dimen/margin_20"
                 android:layout_marginTop="@dimen/margin_10"
                 android:layout_marginBottom="@dimen/margin_10"
                 android:text="@string/self_limit_account_login_limit"
@@ -36,18 +37,20 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_1"
+                android:layout_marginStart="@dimen/margin_20"
+                android:layout_marginEnd="@dimen/margin_20"
                 android:background="@color/color_404040_e2e2e2" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_14"
+                android:layout_marginLeft="@dimen/margin_20"
                 android:layout_marginTop="@dimen/margin_8"
-                android:layout_marginRight="@dimen/margin_14"
+                android:layout_marginRight="@dimen/margin_20"
                 android:layout_marginBottom="@dimen/margin_10"
+                android:lineSpacingExtra="8dp"
                 android:text="@string/self_limit_froze_content"
                 android:textColor="@color/color_BBBBBB_333333"
-                android:lineSpacingExtra="8dp"
                 android:textSize="@dimen/textSize12sp" />
 
             <LinearLayout
@@ -68,14 +71,13 @@
                     android:layout_weight="1"
                     android:text="@string/self_limit_impotent"
                     android:textColor="@color/color_BBBBBB_333333"
-                    android:textSize="@dimen/textSize13sp"
-                    android:textStyle="bold" />
+                    android:textSize="@dimen/textSize13sp" />
 
                 <ImageView
                     android:layout_width="@dimen/margin_16"
                     android:layout_height="@dimen/margin_16"
                     android:layout_marginRight="@dimen/margin_14"
-                    android:src="@drawable/ic_blue_info" />
+                    android:src="@drawable/ic_icon_exp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -85,9 +87,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_10"
-        app:cardCornerRadius="@dimen/margin_4"
         app:cardBackgroundColor="@color/transparent_black_0"
-        app:cardElevation="0dp">
+        app:cardCornerRadius="@dimen/margin_5"
+        app:cardElevation="5dp"
+        app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:id="@+id/llSelfFrozeLimit"
@@ -100,22 +103,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minWidth="62dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="@dimen/margin_10"
                 android:layout_marginEnd="@dimen/margin_10"
+                android:minWidth="62dp"
                 android:text="@string/self_limit_froze_days"
                 android:textColor="@color/color_BBBBBB_333333"
-                android:textSize="@dimen/textSize13sp"
-                android:textStyle="bold" />
+                android:textSize="@dimen/textSize13sp" />
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:layout_marginTop="@dimen/margin_10"
-                android:layout_marginBottom="@dimen/margin_10"
-                android:background="@color/color_cccccc_e2e2e2" />
 
             <EditText
                 android:id="@+id/etFrozeDay"
@@ -125,31 +120,12 @@
                 android:layout_marginLeft="@dimen/margin_8"
                 android:layout_weight="1"
                 android:backgroundTint="@color/transparent"
-                android:textColor="@color/color_BBBBBB_333333"
-                android:textColorHint="@color/color_404040_cccccc"
                 android:hint="@string/self_limit_froze_input_days"
                 android:inputType="number"
                 android:maxLength="8"
+                android:textColor="@color/color_BBBBBB_333333"
+                android:textColorHint="@color/color_404040_cccccc"
                 android:textSize="@dimen/textSize12sp" />
-
-            <TextView
-                android:id="@+id/btnConfirm"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:layout_marginTop="@dimen/margin_6"
-                android:layout_marginRight="@dimen/margin_14"
-                android:layout_marginBottom="@dimen/margin_6"
-                android:background="@drawable/bg_radius_4_button_withdraw_commission_blue"
-                android:enabled="false"
-                android:gravity="center"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:text="@string/btn_confirm"
-                android:textAllCaps="true"
-                android:textColor="@color/color_317FFF_0760D4"
-                android:textSize="@dimen/textSize12sp"
-                android:textStyle="bold" />
 
 
         </LinearLayout>
@@ -157,8 +133,8 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:layout_width="wrap_content"
         android:id="@+id/tvUsTime"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_8"
         android:textColor="@color/color_E44438_e44438"
@@ -174,5 +150,24 @@
         android:textColor="@color/color_E44438_e44438"
         android:textSize="@dimen/textSize12sp"
         android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/btnConfirm"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/margin_45"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="@dimen/margin_10"
+        android:layout_marginEnd="@dimen/margin_14"
+        android:layout_marginBottom="@dimen/margin_6"
+        android:background="@drawable/ic_submit"
+        android:enabled="false"
+        android:gravity="center"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:text="@string/btn_confirm"
+        android:textAllCaps="true"
+        android:textColor="@color/exo_white"
+        android:textSize="@dimen/textSize12sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
