--- a/app/src/main/res/layout/content_type_4_group_item.xml
+++ b/app/src/main/res/layout/content_type_4_group_item.xml
@@ -48,7 +48,10 @@
         android:layout_height="wrap_content"
         android:nestedScrollingEnabled="false"
         android:overScrollMode="never"
-        android:padding="@dimen/activity_vertical_margin"
+        android:paddingTop="7dp"
+        android:paddingBottom="7dp"
+        android:paddingLeft="7dp"
+        android:paddingRight="7dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
         tools:itemCount="4"
