--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -375,4 +375,14 @@
     <color name="color_F0F8FF">#F0F8FF</color>
     <color name="color_1B73FF">#1B73FF</color>
     <color name="color_F9F9F9">#F9F9F9</color>
+    <color name="color_F3F6FF">#F3F6FF</color>
+    <color name="color_ACBFFF">#ACBFFF</color>
+    <color name="color_E1EBFF">#E1EBFF</color>
+    <color name="color_FFC27B">#FFC27B</color>
+    <color name="color_FF8B59">#FF8B59</color>
+    <color name="color_FF9855">#FF9855</color>
+    <color name="color_F4F4F4">#F4F4F4</color>
+    <color name="color_D4E1F1">#D4E1F1</color>
+    <color name="color_FAFCFF">#FAFCFF</color>
+
 </resources>
