--- a/app/src/main/res/drawable/bg_white_bottom_radius_10.xml
+++ b/app/src/main/res/drawable/bg_white_bottom_radius_10.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <solid android:color="@color/color_191919_FCFCFC" />
     <corners
-        android:topLeftRadius="8dp"
-        android:topRightRadius="8dp" />
-    <solid android:color="@color/selector_date_item_bg_stroke_v4" />
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp" />
 </shape>
