--- a/app/src/main/res/drawable/shape_date_item_bg_v4.xml
+++ b/app/src/main/res/drawable/shape_date_item_bg_v4.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:radius="6dp" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/selector_date_item_bg_stroke_v4" />
-    <solid android:color="@color/color_191919_FCFCFC" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_selected="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="8dp" />
+            <solid android:color="@color/color_025BE8" />
+        </shape>
+    </item>
+    <item android:state_selected="false">
+        <shape android:shape="rectangle">
+            <corners android:radius="8dp" />
+            <stroke android:width="1dp" android:color="@color/color_ACBFFF" />
+            <solid android:color="@color/color_F3F6FF" />
+        </shape>
+    </item>
+</selector>
