--- a/app/src/main/res/layout/fragment_sport_list.xml
+++ b/app/src/main/res/layout/fragment_sport_list.xml
@@ -88,11 +88,12 @@
                         android:id="@+id/iv_calendar"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_marginRight="@dimen/margin_10"
+                        android:layout_marginRight="@dimen/margin_5"
                         android:padding="5dp"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/selector_calendar_v4"
-                        tools:visibility="gone" />
+                        android:src="@drawable/ic_calendar"
+                        android:visibility="gone"
+                        tools:visibility="visible" />
 
                     <ImageView
                         android:id="@+id/iv_arrow"
