--- a/app/src/main/res/layout/itemview_date_v4.xml
+++ b/app/src/main/res/layout/itemview_date_v4.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="56dp"
-    android:layout_height="64dp"
+    android:layout_width="63dp"
+    android:layout_height="56dp"
     android:background="@drawable/shape_date_item_bg_v4"
     tools:context="org.cxct.sportlottery.ui.game.hall.adapter.DateAdapter"
     tools:ignore="SpUsage">
@@ -28,27 +28,13 @@
         android:layout_marginTop="2dp"
         android:textAllCaps="true"
         android:textColor="@color/selector_date_item_text_v4"
-        android:textSize="@dimen/textSize14sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="@dimen/textSize16sp"
+        android:fontFamily="@font/helvetica"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/date_text_week"
-        tools:text="23" />
-
-    <TextView
-        android:id="@+id/date_text_month"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:ellipsize="end"
-        android:textAllCaps="true"
-        android:textColor="@color/selector_date_item_text_v4"
-        android:textSize="@dimen/textSize12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/date_text_date"
-        tools:text="Oct" />
+        app:layout_constraintBottom_toBottomOf="@id/date_text_other"
+        tools:text="08/02" />
 
     <TextView
         android:id="@+id/date_text_other"
@@ -57,8 +43,8 @@
         android:background="@drawable/shape_date_item_bg_other_v4"
         android:gravity="center"
         android:textAllCaps="true"
-        android:textColor="@color/selector_date_item_text_other_v4"
-        android:textSize="@dimen/textSize12sp"
+        android:textColor="@color/selector_date_item_text_v4"
+        android:textSize="@dimen/textSize14sp"
         tools:text="所有日期"
         tools:visibility="gone" />
 
