--- a/app/src/main/res/layout/activity_modify_profile_info.xml
+++ b/app/src/main/res/layout/activity_modify_profile_info.xml
@@ -68,224 +68,228 @@
             <LinearLayout
                 android:id="@+id/ll_real_name"
                 android:layout_width="match_parent"
-                android:layout_height="77dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="4dp"
                 android:background="@color/exo_white"
+                android:clickable="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <LinearLayout
+
+                <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
+                    android:id="@+id/et_real_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_marginStart="@dimen/margin_14"
+                    android:layout_marginTop="4dp"
                     android:layout_marginEnd="@dimen/margin_14"
-                    android:orientation="vertical">
+                    app:hintText="@string/edt_hint_real_name"
+                    app:isResponsiveIconColor="false"
+                    app:labelText="@string/real_name"
+                    app:labelTextStyle="normal"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:primaryColor="@color/color_AFAFB1">
 
-                    <TextView
+                    <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
+                        android:id="@+id/eet_real_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/real_name"
-                        android:textColor="@color/color_414655"
+                        android:imeOptions="actionNext"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:textColor="@color/color_FFFFFF_DE000000"
                         android:textSize="@dimen/textSize14sp" />
 
-                    <EditText
-                        android:id="@+id/et_real_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_3"
-                        android:background="@null"
-                        android:hint="@string/edt_hint_real_name"
-                        android:textColor="@color/color_414655"
-                        android:textSize="@dimen/textSize14sp" />
+                </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
 
-                </LinearLayout>
-
-
-                <!--        <org.cxct.sportlottery.ui.login.LoginEditText-->
-                <!--            android:id="@+id/et_real_name"-->
-                <!--            android:layout_width="match_parent"-->
-                <!--            android:layout_height="wrap_content"-->
-                <!--            app:cvHint="@string/edt_hint_real_name"-->
-                <!--            app:cvTitle="@string/real_name" />-->
             </LinearLayout>
 
-            <!--  QQ號碼  -->
             <LinearLayout
                 android:id="@+id/ll_qq_number"
                 android:layout_width="match_parent"
-                android:layout_height="77dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="4dp"
                 android:background="@color/exo_white"
+                android:clickable="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <LinearLayout
+
+                <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
+                    android:id="@+id/et_qq_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_marginStart="@dimen/margin_14"
+                    android:layout_marginTop="4dp"
                     android:layout_marginEnd="@dimen/margin_14"
-                    android:orientation="vertical">
+                    app:hintText="@string/hint_qq_number"
+                    app:isResponsiveIconColor="false"
+                    app:labelText="@string/qq_number"
+                    app:labelTextStyle="normal"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:primaryColor="@color/color_AFAFB1">
 
-                    <TextView
+                    <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
+                        android:id="@+id/eet_qq_number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/qq_number"
-                        android:textColor="@color/color_414655"
+                        android:imeOptions="actionNext"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:textColor="@color/color_FFFFFF_DE000000"
                         android:textSize="@dimen/textSize14sp" />
 
-                    <EditText
-                        android:id="@+id/et_qq_number"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_3"
-                        android:background="@null"
-                        android:hint="@string/hint_qq_number"
-                        android:textColor="@color/color_414655"
-                        android:textSize="@dimen/textSize14sp" />
+                </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
 
-                </LinearLayout>
-
-
-                <!--        <org.cxct.sportlottery.ui.login.LoginEditText-->
-                <!--            android:id="@+id/et_qq_number"-->
-                <!--            android:layout_width="match_parent"-->
-                <!--            android:layout_height="wrap_content"-->
-                <!--            app:cvHint="@string/hint_qq_number"-->
-                <!--            app:cvInputType="number"-->
-                <!--            app:cvTitle="@string/qq_number" />-->
             </LinearLayout>
 
-            <!--  郵箱  -->
+
+            <!--        <org.cxct.sportlottery.ui.login.LoginEditText-->
+            <!--            android:id="@+id/et_qq_number"-->
+            <!--            android:layout_width="match_parent"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            app:cvHint="@string/hint_qq_number"-->
+            <!--            app:cvInputType="number"-->
+            <!--            app:cvTitle="@string/qq_number" />-->
+
             <LinearLayout
                 android:id="@+id/ll_e_mail"
                 android:layout_width="match_parent"
-                android:layout_height="77dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="4dp"
                 android:background="@color/exo_white"
+                android:clickable="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:gravity="center"
                 android:orientation="vertical">
 
 
-                <LinearLayout
+                <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
+                    android:id="@+id/et_e_mail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_marginStart="@dimen/margin_14"
+                    android:layout_marginTop="4dp"
                     android:layout_marginEnd="@dimen/margin_14"
-                    android:orientation="vertical">
+                    app:hintText="@string/hint_e_mail"
+                    app:isResponsiveIconColor="false"
+                    app:labelText="@string/e_mail"
+                    app:labelTextStyle="normal"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:primaryColor="@color/color_AFAFB1">
 
-                    <TextView
+                    <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
+                        android:id="@+id/eet_e_mail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/e_mail"
-                        android:textColor="@color/color_414655"
+                        android:imeOptions="actionNext"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:textColor="@color/color_FFFFFF_DE000000"
                         android:textSize="@dimen/textSize14sp" />
 
-                    <EditText
-                        android:id="@+id/et_e_mail"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_3"
-                        android:background="@null"
-                        android:hint="@string/hint_e_mail"
-                        android:textColor="@color/color_414655"
-                        android:textSize="@dimen/textSize14sp" />
-
-                </LinearLayout>
-
+                </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
 
             </LinearLayout>
 
-            <!--  手機號碼  -->
+
             <LinearLayout
                 android:id="@+id/ll_phone_number"
                 android:layout_width="match_parent"
-                android:layout_height="77dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="4dp"
                 android:background="@color/exo_white"
+                android:clickable="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:gravity="center"
                 android:orientation="vertical">
 
 
-                <LinearLayout
+                <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
+                    android:id="@+id/et_phone_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_marginStart="@dimen/margin_14"
+                    android:layout_marginTop="4dp"
                     android:layout_marginEnd="@dimen/margin_14"
-                    android:orientation="vertical">
+                    app:hintText="@string/hint_phone_number"
+                    app:isResponsiveIconColor="false"
+                    app:labelText="@string/phone_number"
+                    app:labelTextStyle="normal"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:primaryColor="@color/color_AFAFB1">
 
-                    <TextView
+                    <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
+                        android:id="@+id/eet_phone_number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/phone_number"
-                        android:textColor="@color/color_414655"
+                        android:imeOptions="actionNext"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:textColor="@color/color_FFFFFF_DE000000"
                         android:textSize="@dimen/textSize14sp" />
 
-                    <EditText
-                        android:id="@+id/et_phone_number"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_3"
-                        android:background="@null"
-                        android:hint="@string/hint_phone_number"
-                        android:textColor="@color/color_414655"
-                        android:textSize="@dimen/textSize14sp" />
-
-                </LinearLayout>
-
+                </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
 
             </LinearLayout>
 
-            <!--  微信  -->
             <LinearLayout
                 android:id="@+id/ll_wechat"
                 android:layout_width="match_parent"
-                android:layout_height="77dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="4dp"
                 android:background="@color/exo_white"
+                android:clickable="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:gravity="center"
                 android:orientation="vertical">
 
 
-                <LinearLayout
+                <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
+                    android:id="@+id/et_we_chat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="center"
                     android:layout_marginStart="@dimen/margin_14"
+                    android:layout_marginTop="4dp"
                     android:layout_marginEnd="@dimen/margin_14"
-                    android:gravity="center"
-                    android:orientation="vertical">
+                    app:hintText="@string/hint_we_chat_number"
+                    app:isResponsiveIconColor="false"
+                    app:labelText="@string/we_chat"
+                    app:labelTextStyle="normal"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:primaryColor="@color/color_AFAFB1">
 
-                    <TextView
+                    <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
+                        android:id="@+id/eet_we_chat"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/we_chat"
-                        android:textColor="@color/color_414655"
+                        android:imeOptions="actionNext"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:textColor="@color/color_FFFFFF_DE000000"
                         android:textSize="@dimen/textSize14sp" />
 
-                    <EditText
-                        android:id="@+id/et_we_chat"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_3"
-                        android:background="@null"
-                        android:hint="@string/hint_we_chat_number"
-                        android:textColor="@color/color_414655"
-                        android:textSize="@dimen/textSize14sp" />
-
-                </LinearLayout>
-
+                </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
 
             </LinearLayout>
+
 
         </LinearLayout>
     </ScrollView>
