--- a/app/src/main/res/layout/fragment_feedback_submit.xml
+++ b/app/src/main/res/layout/fragment_feedback_submit.xml
@@ -3,26 +3,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/color_141414_F3F4F5"
+    android:orientation="vertical"
     android:paddingHorizontal="14dp"
     tools:context=".ui.feedback.suggest.FeedbackSubmitFragment">
 
-    <EditText
-        android:id="@+id/et_content"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="373dp"
-        android:background="@drawable/bg_frame_5dp"
-        android:layout_marginTop="14dp"
-        android:textSize="@dimen/textSize14sp"
-        android:gravity="top"
-        android:maxLength="500"
-        android:padding="14dp"
-        android:hint="@string/can_input_1_to_500_word"
-        android:textColor="@color/color_BBBBBB_333333"
-        android:textColorHint="@color/color_AEAEAE_545454"/>
+        android:layout_height="368dp">
 
-    <include
-        layout="@layout/view_submit_with_text_count"/>
+        <EditText
+            android:id="@+id/et_content"
+            android:layout_width="match_parent"
+            android:layout_height="373dp"
+            android:layout_marginTop="14dp"
+            android:background="@drawable/bg_frame_5dp"
+            android:gravity="top"
+            android:hint="@string/can_input_1_to_500_word"
+            android:maxLength="500"
+            android:padding="14dp"
+            android:textColor="@color/color_BBBBBB_333333"
+            android:textColorHint="@color/color_AEAEAE_545454"
+            android:textSize="@dimen/textSize14sp" />
+
+        <TextView
+            android:id="@+id/tv_input_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginVertical="14dp"
+            android:gravity="end"
+            android:textColor="@color/color_B3FFFFFF_99000000"
+            android:textSize="@dimen/textSize14sp"
+            android:layout_alignParentRight="true"
+            tools:text="0 / 500" />
+
+    </RelativeLayout>
+
+
+    <include layout="@layout/view_submit_with_text_count" />
 
 </LinearLayout>
