--- a/app/src/main/res/layout/fragment_feedback_suggest.xml
+++ b/app/src/main/res/layout/fragment_feedback_suggest.xml
@@ -44,6 +44,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/feedback"
+                    android:drawableLeft="@drawable/ic_oval"
+                    android:drawablePadding="@dimen/dp_4"
                     android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize14sp"
                     android:textStyle="bold" />
@@ -54,7 +56,7 @@
                     android:layout_marginTop="10dp"
                     android:lineSpacingExtra="6dp"
                     android:text="@string/feedback_description"
-                    android:textColor="@color/color_AEAEAE_404040"
+                    android:textColor="@color/color_535D76"
                     android:textSize="@dimen/textSize12sp" />
 
                 <TextView
@@ -72,9 +74,8 @@
                     android:id="@+id/btn_submit"
                     android:layout_width="match_parent"
                     android:layout_height="44dp"
-                    android:layout_marginHorizontal="14dp"
                     android:layout_marginTop="20dp"
-                    android:background="@drawable/bg_radius_22_button_dusk"
+                    android:background="@drawable/ic_submit"
                     android:gravity="center"
                     android:text="@string/write_suggestion"
                     android:textAllCaps="true"
