--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -654,10 +654,22 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
-                                android:layout_toStartOf="@+id/iv_line2"
-                                android:text="常见问题  |  游戏规则  |  意见反馈"
+                                android:layout_toStartOf="@+id/tv_feedback"
+                                android:text="常见问题  |  游戏规则  |  "
                                 android:textColor="@color/color_A7B2C"
                                 android:textSize="@dimen/textSize12sp" />
+
+
+
+                            <TextView
+                                android:id="@+id/tv_feedback"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/color_A7B2C"
+                                android:textSize="@dimen/textSize12sp"
+                                android:layout_centerVertical="true"
+                                android:layout_toStartOf="@+id/iv_line2"
+                                android:text="意见反馈"/>
 
                             <View
                                 android:layout_width="match_parent"
@@ -1422,6 +1434,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_8"
+                android:layout_marginBottom="@dimen/margin_10"
                 android:gravity="center">
 
                 <View
