--- a/app/src/main/res/layout/view_submit_with_text_count.xml
+++ b/app/src/main/res/layout/view_submit_with_text_count.xml
@@ -34,25 +34,13 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_input_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="14dp"
-        android:gravity="end"
-        android:textColor="@color/color_B3FFFFFF_99000000"
-        android:textSize="@dimen/textSize14sp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="0 / 500" />
 
     <TextView
         android:id="@+id/btn_submit"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:layout_marginVertical="14dp"
-        android:background="@drawable/bg_radius_22_button_dusk"
+        android:background="@drawable/ic_submit"
         android:gravity="center"
         android:text="@string/submit"
         android:textAllCaps="true"
